# Hunk.rs

./: Cargo.toml
src/: byte_hunk.rs  byte_patch.rs  byte_region.rs  byte_rewrite.rs  bytes.rs  hunk_ref.rs  lib.rs  main.rs  refs.rs  tests.rs
tests/: byte_hunk_tests.rs  point_tests.rs  region_tests.rs
